--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -132,7 +132,6 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 
 In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
 
-This chapter begins with re-examining of game play design patterns as a unit of analysis for this research. Following this a vignette of parent child interaction in game making process helps contextualise findings. The chapter then undertakes a systematic analysis of varied uses of game design patterns by participants drawing on detailed observations of practice in recorded video data. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part of this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to educational designers and researchers.
 
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
@@ -155,48 +154,48 @@ This chapter centres on an interpretation of the implementation of game design p
 
 _Recap on design patterns and game design patterns_
 
-In chapter two the use of design patterns in an education context were summarised as a relatable contextual basis for learning complex code structures. More specifically, game design patterns they have been used in educational settings to aid aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work to help deepen the knowledge of participants and provide a shared language to help collaborative design [@eriksson_using_2019].
+In chapter two the use of design patterns in an education context were summarised as a relatable contextual basis for learning complex code structures. While existing research on the use of game design patterns in educational settings exists, specifically, to aid aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work  [@eriksson_using_2019], little exists which addresses their use to overcome challenges in participation in an emerging community of game making using text coding.  
+
+<!-- to help deepen the knowledge of participants and provide a shared language to help collaborative design -->
 
 
   <!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
   <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
-_Identifying GDPs as a germ cell/ unit of analysis_
 
-The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback.
+_extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_
 
-The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.
+The last chapter explored the activity of iteratively of altering a game at the level of gameplay design pattern as one part of the mutual evolution of the learning design in varied forms including;  supporting resources, in the form of a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification.
+AND?  provided support processes.
 
-This chapter develops analysis of the role of GDPs as a mediational strategies in varied forms including;  supporting resources, provided support processes and naturally emerging practices.
 
-BREAK DOWN?
-These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification.
+<!-- These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers -->
 
-While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means. These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers (as explored in chapter three and four).
+<!-- While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means.  -->
 
-**GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
+This chapter develops analysis of GDPs used in diverse meditational strategies not only as part of facilitator-provided resources and scaffolds but as part of emerging community practices and interpersonal repertoires.
 
-CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015] & guitierez?.  
+During data analysis, these uses of GDPs emerged as so important in varied forms that they became a candidate for a germ cell concepts. The following sections explore the variety of uses.
 
-<!-- THIS PERHAPS IS FOR CONCLUSION? This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc. -->
+A final section of this chapter analysis how this proposition of GDP as germ cell fits within a CHAT analysis.   
 
-We can frame how these process contribute to the development of agency on the part of participants in the following way.
-
-BEGIN INTRODUCTION TO ANALYSIS OF AGENCY.
-
-These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
 
 _Structure of the chapter around 3 planes / activity system scopes_
 
-The sections focus on the way design patterns are used by parents, children and facilitators in this emerging game making community.
 
-To present findings from video data, I draw on the Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in Chapter 4.
-NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE UNITS OF ANALYIS .
+To present findings from video data, I draw on the Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in Chapter 4. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
 
-It is worthwhile to recall that the three planes can be concieved within a CHAT framework in that the planes can be interpreted as activity happening at wider or narrower scopes.
+The sections focus on analysis of use of design patterns are used by parents, children and facilitators at using the three different foci. There is an broad analogue between
+analysis using these three planes and analysis of activity systems at larger or smaller scopes.
+Explicitly the cultural plane can be compared to the community scope of activity described in the previous chapter in Figure 5.x and interpersonal and personal planes with the smaller scope in Figure 5.x
 
-Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
+
+<!-- NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE UNITS OF ANALYIS . -->
+
+This chapter begins with re-examining of game play design patterns as a unit of analysis for this research. Following this a vignette of parent child interaction in game making process helps contextualise findings. The chapter then undertakes a systematic analysis of varied uses of game design patterns by participants drawing on detailed observations of practice in recorded video data. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part of this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to educational designers and researchers.
+
+
 ## Study of Vignette 2
 
 
@@ -1147,6 +1146,8 @@ There are challenges of the use of these short cuts and at a more general the de
 
 ### A discussion of aspects of culture, home interests and evolving participation in an idioculture
 
+
+
 The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
 
 The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism. More recent work by guitierez describes this as development of repetoires.
@@ -1234,10 +1235,20 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 
 ### Summary of the uses of Game Design Patterns
 
-
-
-
 GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
+
+**GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
+
+CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015] & guitierez?.  
+
+<!-- THIS PERHAPS IS FOR CONCLUSION? This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc. -->
+
+We can frame how these process contribute to the development of agency on the part of participants in the following way.
+
+
+These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
+
+
 
 #### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
 
