looking at discussion

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -130,7 +130,6 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 
 ## Introduction
 
-In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
 
 
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
@@ -147,14 +146,17 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-**On GDP as a germ-cell and unit of analysis recap of design patterns**
+<!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
+In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. This chapter centres on an interpretation of the varied uses of gameplay design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
+
+
+<!-- Guided by Rogoff's concept of guided participation, this chapter analyses this emergent activity at a scope between concrete tool use and the wider cultural context of the game making community.  -->
 
 _Recap on design patterns and game design patterns_
 
-In chapter two the use of design patterns in an education context were summarised as a relatable contextual basis for learning complex code structures. While existing research on the use of game design patterns in educational settings exists, specifically, to aid aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work  [@eriksson_using_2019], little exists which addresses their use to overcome challenges in participation in an emerging community of game making using text coding.  
+In chapter two the use of design patterns in an education context were summarised. While existing research on the use of game design patterns in educational settings exists, specifically, to aid aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work  [@eriksson_using_2019], little exists which addresses their use to overcome challenges in participation in an emerging community of game making using text coding.  
 
 <!-- to help deepen the knowledge of participants and provide a shared language to help collaborative design -->
 
@@ -174,21 +176,17 @@ AND?  provided support processes.
 
 <!-- While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means.  -->
 
-This chapter develops analysis of GDPs used in diverse meditational strategies not only as part of facilitator-provided resources and scaffolds but as part of emerging community practices and interpersonal repertoires.
+This chapter develops analysis of GDPs used in diverse meditational strategies not only as part of facilitator-provided resources and scaffolds but as part of emerging community practices and interpersonal repertoires. During data analysis, these uses of GDPs emerged as so important in varied forms that they became a candidate for a germ cell concepts.
 
-During data analysis, these uses of GDPs emerged as so important in varied forms that they became a candidate for a germ cell concepts. The following sections explore the variety of uses.
-
-A final section of this chapter analysis how this proposition of GDP as germ cell fits within a CHAT analysis.   
+<!-- The following sections explore the variety of uses. A final section of this chapter analysis how this proposition of GDP as germ cell fits within a CHAT analysis.    -->
 
 
 _Structure of the chapter around 3 planes / activity system scopes_
 
 
-To present findings from video data, I draw on the Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in Chapter 4. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
+To analyse and present findings from recorded data, I have draw on Rogoff's three planes of analysis [@rogoff_observing_1995] as explored in Chapter 4. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
 
-The sections focus on analysis of use of design patterns are used by parents, children and facilitators at using the three different foci. There is an broad analogue between
-analysis using these three planes and analysis of activity systems at larger or smaller scopes.
-Explicitly the cultural plane can be compared to the community scope of activity described in the previous chapter in Figure 5.x and interpersonal and personal planes with the smaller scope in Figure 5.x
+The sections focus on analysis of use of design patterns are used by parents, children and facilitators at using the three different foci. There is an analogy between analysis using these three planes and analysis of activity systems at larger or smaller scopes. More explicitly, the cultural plane can be compared to the community scope of activity described in the previous chapter in Figure 5.x and interpersonal and personal planes with the smaller scope in Figure 5.x
 
 
 <!-- NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE UNITS OF ANALYIS . -->
@@ -1040,6 +1038,8 @@ The majority of this chapter has focused on interpretation of observations of pa
 
 In this discussion section, I:
 
+- explore the uses of GDPs in relation to varied conceptions of abstraction, chiefly CHAT and CT
+
 - propose that GDPs provide a suitable way to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures.
 
 - explore potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
@@ -1064,6 +1064,8 @@ From the perspective of participants and facilitators, the process can be transf
 
 While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects.
 
+
+### Discussion of findings in relation to Computational Thinking and  abstraction
 
 I propose design patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing.
 
@@ -1102,10 +1104,6 @@ In professional coding environment and training programmes design patterns are s
 
 Similarly, here the implementation of GDPs as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
 
-
-
-
-
 #### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
 
 The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
@@ -1140,13 +1138,15 @@ Both the GDPs and the sub-actions of the wider activity design become short-cuts
 
 Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
 
-
+IS THIS THE RIGHT PLACE?
 There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
 
 
 ### A discussion of aspects of culture, home interests and evolving participation in an idioculture
 
+HOWE TO MAKE A LINK? 
 
+Turning to another aspect of concrete / relatable experience.
 
 The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
 
