conclusion and tensions

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1144,7 +1144,7 @@ There are challenges of the use of these short cuts and at a more general the de
 
 ### A discussion of aspects of culture, home interests and evolving participation in an idioculture
 
-HOWE TO MAKE A LINK? 
+HOWE TO MAKE A LINK?
 
 Turning to another aspect of concrete / relatable experience.
 
@@ -1163,33 +1163,22 @@ The cultural aspects of the learning community are further explored in Chapter 7
 Is there something that merits mentioning here as a link within Ch.7?
 
 
+### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
+
+While beyond the remit of this thesis, elements of FoK and FoI, x and y,  align with inclusive processes and ethos behind PBL and UMC.
+
+The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+
+GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour.
+
+The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
 
-### Implications and beginnings of suggestions for practitioners  -
-
-While their results on the advantages and challenges of patterns use focus principally on the perspective of designers (as a way to frame analysis of the activity and shifting interpretations of pattern interpretations), the participant is also shared. I explore some of the opportunities and challenges they surface addressing learner perspective.
-
-The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
-
-NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
-
-PRESENT IN A TABLE OR VIA SOME EASY TO PARSE HEADINGS.
-
-
-The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs.
 
 <!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
 <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
-
-
-**The concept of a restricted activity helps us understand the value a GDP collection for participants**
-
-The positive impact of restricted choice of activities are outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
-
-
 <!-- For exa In the language of double stimulation, a tension of relative inactivity at times is overcome by invitations to playtest and resulting interaction. -->
-
 
 <!-- ### Link Paragraph to next chapter
 
@@ -1203,14 +1192,20 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 <!-- #### Re-examining the problem of PBL approaches considering the role of the potential of GDP collections -->
 
-**Design Pattern collections can help structure a learning design into an inclusive pedagogy**
+**The concept of a restricted activity helps us understand the value a GDP collection for participants**
+&  **Design Pattern collections can help structure a learning design into an inclusive pedagogy**
 
-As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to scaffold domain specific working practices [@barron_doing_1998]. Different types of scaffolding are available to support PBL and the authors highlight trade-offs between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63].
+The process of creating a learning design where students were able to choose from a curated set of game design patterns, evolved from open approach in P1 and can be seen as a form of restricting possible activity. The positive impact of restricted choice of activities are outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976]. In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
+
+The processes described above align with PBL and UDL in a way that merits further investigation in different settings.
+
+As explored in the literature review a key challenge to project based learning is finding appropriate conceptual and practical frameworks to scaffold domain specific working practices [@barron_doing_1998]. Different types of scaffolding are available to support PBL and the authors highlight a dialectical tension between engagement via tinkering and pushing "principled understanding" [@barron_doing_1998, p.63].
+
 Design patterns have been explored as a form of scaffolding [@ertmer_scaffolding_2019] for project based learning experiences. Research on design online experiences shows value in interrelated scenarios, features and underlying patterns and principles [@mor_assessing_2014; @kali_collaborative_2006].
 
 In computing eduction pattern based instruction has benefits of making complex problems more modular and concrete [@muller_almost_2004-1; @waite_teaching_2021].
 
-The processes described above align with PBL and UDL in a way that merits further investigation in different settings.
+In its engagement with participant choice over which patterns to implement, and varied approaches to making facilitated by varied uses of GDPs, this chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants, which is continued in the next chapter.
 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
@@ -1248,7 +1243,7 @@ We can frame how these process contribute to the development of agency on the pa
 
 These concepts and this framing is explore in the next chapter with examples that extend beyond the use of GDPs to other cultural processes.
 
-
+#### Returning to some of the tensions explore in the last chapter. 
 
 #### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
 
@@ -1257,8 +1252,9 @@ These concepts and this framing is explore in the next chapter with examples tha
 
 This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.  While the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
 
-
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
+IS THIS A TENSION WORTH HIGHLIGHTING MORE CLEARLY?
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. IS THIS EXPLORED IN THE NEXT CHAPTER?
+The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
 
 <!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
 <!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
